# reverie

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
ai_docs/: dbi-detcore-integration.md  dbi-multiprocess.md  kvm-syscall-bridge-spike.md
docs/: BACKEND_SOURCES.md
experimental/: dbi-strace-vs-ptrace.md
experimental/nostd-print/src/: lib.rs
experimental/reverie-host/src/: tracer.rs
experimental/reverie-rpc-macros/src/: expand.rs  lib.rs  parse.rs
experimental/reverie-rpc/src/: codec.rs  service.rs
experimental/reverie-sabre/: ASSESSMENT.md  CAPABILITIES.md  Cargo.toml  SABRE_UPSTREAM.toml  build.rs
experimental/reverie-sabre-macros/src/: expand.rs
experimental/reverie-sabre-strace/: Cargo.toml  README.md
experimental/reverie-sabre-strace/src/: lib.rs  main.rs
experimental/reverie-sabre/conformance/: run.sh  signal_forwarding.c  thread_lifecycle.c
experimental/reverie-sabre/src/: callbacks.rs  internal.rs  lib.rs  paths.rs  protected_files.rs  reverie_adapter.rs  rpc.rs  slot_map.rs  thread.rs  tool.rs  utils.rs
experimental/reverie-sabre/src/ffi/: UPSTREAM.md  clone.rs  mod.rs
experimental/reverie-sabre/src/signal/: guard.rs  mod.rs
experimental/riptrace/: Cargo.toml  README.md
experimental/riptrace/src/: main.rs
experimental/riptrace/tool/: Cargo.toml
experimental/riptrace/tool/src/: lib.rs
reverie-dbi/: Cargo.toml  README.md  build.rs
reverie-dbi/examples/: dbi_strace.rs
reverie-dbi/native/: client.c
reverie-dbi/scripts/: test-multiprocess.sh
reverie-dbi/src/: coordinator.rs  detcore_proof.rs  launcher.rs  lib.rs  tools.rs
reverie-dbi/tests/: multiprocess_coordinator.rs
reverie-kvm/: Cargo.toml  README.md
reverie-kvm/src/: bootstrap.rs  bridge.rs  elf.rs  error.rs  executor.rs  guest.rs  lib.rs  memory.rs  runtime.rs  syscall.rs  vm.rs
reverie-kvm/tests/: static_elf.rs  strace.rs  syscall_bridge.rs  vmcall.rs
reverie-liteinst/: Cargo.toml  README.md
reverie-liteinst/src/: lib.rs  pun.rs  runtime.rs
reverie-liteinst/tests/: strace.rs
reverie-process/src/: lib.rs  mount.rs
reverie-ptrace/src/: task.rs  tracer.rs
reverie-syscalls/src/syscalls/: family.rs  mod.rs
reverie/src/: guest.rs
scripts/: backend-submodule.sh  count-stubs.sh
