[package]
name = "reverie-dbi"
version = "0.1.0"
authors = ["Meta Platforms"]
edition = "2024"
repository = "https://github.com/facebookexperimental/reverie"
license = "BSD-2-Clause"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.186"
reverie = { version = "0.1.0", path = "../reverie" }
reverie-memory = { version = "0.1.0", path = "../reverie-memory" }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
# Test-only: the multi-threaded-runtime PoC for driving a suspending
# GlobalTool-actor handler over DbiGuest (mirrors Detcore's sched_loop). The
# cdylib itself stays Tokio-free; the runtime choice belongs to the caller.
tokio = { version = "1.52.4", features = ["rt-multi-thread", "macros", "sync"] }
